# wms-api

./: .env.compose  LICENSE  README.md  compose.yaml  pyproject.toml
wms-app/: .env.template  main.py  pytest.ini
wms-app/alembic/: env.py
wms-app/alembic/versions/: 2025_05_05_1757-35885f6969a7_create_all_tables.py
wms-app/api/: __init__.py
wms-app/api/v1/: __init__.py  dependencies.py  orders.py  products.py
wms-app/core/: config.py
wms-app/db/: __init__.py  db_helper.py
wms-app/dto/: __init__.py  order_items.py  orders.py  products.py
wms-app/models/: __init__.py  base.py  enums.py  order_items.py  orders.py  products.py
wms-app/models/mixins/: timestamp_mixins.py
wms-app/repositories/: __init__.py  order_items.py  orders.py  products.py
wms-app/schemas/: __init__.py  order_items.py  orders.py  products.py
wms-app/services/: __init__.py  orders.py  products.py
wms-app/tests/: conftest.py
wms-app/tests/api/: test_orders.py  test_products.py
wms-app/utils/: __init__.py
