[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.12" }
uvicorn = { extras = ["standard"], version = "^0.34.2" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.40" }
asyncpg = "^0.30.0"
alembic = "^1.15.2"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = [
    ".", "wms-app",
]
asyncio_mode = "auto"